# recipeLabs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pyrightconfig.json
alembic/: env.py
alembic/versions/: 4f451935d8cf_create_initial_tables.py  74de32bbf119_add_youtube_url_to_recipes.py  7ed0af7a0c5f_add_cascade_delete_to_cook_log.py  84e5c5ed83a2_add_instructions_to_recipes.py  a197c32df0d1_add_instructions_to_recipes.py  e261e7c6ad60_drop_unit_from_recipe_ingredients.py
docs/designs/: 001-data-model.md
src/recipeLabs/: database.py  main.py  models.py
src/recipeLabs/adapters/: themealdb.py
src/recipeLabs/api/: cooks.py  health.py  recipes.py
tests/: conftest.py
tests/fixtures/: themealdb_carbinara.json
tests/integration/: test_api.py  test_recipes.py
tests/unit/: test_themealdb.py
