[project]
name = "recipelabs"
version = "0.1.0"
description = "Recipe interface"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.128.8",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
exclude = "alembic/"
